# stochastic-profit-simulator

./: .env.example  .gitignore  README.md  main.py  package-lock.json  pyproject.toml
Docs/: CSEL-303-Laboratory-Activity-5.docx  phase-0-project-foundation.md
config/: simulation_config.yaml
src/: __init__.py
src/analysis/: __init__.py  reporting.py
src/config/: __init__.py  scenarios.py
src/models/: __init__.py  simulation_inputs.py
src/simulation/: __init__.py  engine.py
tests/: test_models_and_config.py  test_simulation_engine_and_analysis.py  test_smoke.py
