[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monte-claro-business-analysis"
version = "0.1.0"
description = "Monte Carlo business risk analysis scaffold for an academic lab activity."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.0,<3.0",
  "pandas>=2.2,<3.0",
  "matplotlib>=3.9,<4.0",
  "seaborn>=0.13,<1.0",
  "scipy>=1.14,<2.0",
  "PyYAML>=6.0,<7.0",
  "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "black>=24.0,<25.0",
  "ruff>=0.6,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
